--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,14 @@ python-dotenv>=1.0.0
 openai>=1.3.5
 google-cloud-speech>=2.21.0
 requests>=2.31.0
+
+# Text-to-Speech
+gTTS>=2.3.2
+pygame>=2.5.2
+
+# LLM Local
+llama-cpp-python>=0.2.11
+
+# Audio system dependencies (install via apt)
+# sudo apt-get install python3-pyaudio libasound2-dev portaudio19-dev
+# sudo apt-get install alsa-utils pulseaudio
