--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 # Core dependencies
-SpeechRecognition>=3.10.0
-PyAudio>=0.2.14
-python-dotenv>=1.0.0
-openai>=1.3.5
+SpeechRecognition>=3.8.0
+PyAudio>=0.2.11
+python-dotenv>=0.19.0
+openai>=0.27.0
 google-cloud-speech>=2.21.0
-requests>=2.31.0
+requests>=2.26.0
 
 # Text-to-Speech
-gTTS>=2.3.2
-pygame>=2.5.2
+gTTS>=2.3.0
+pygame>=2.0.0
 
 # LLM Local
 llama-cpp-python>=0.2.11
+
+# Modelos LLM
+google-generativeai>=0.3.0
 
 # Audio system dependencies (install via apt)
 # sudo apt-get install python3-pyaudio libasound2-dev portaudio19-dev
