--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
 # Core dependencies
-SpeechRecognition>=3.8.0
-PyAudio>=0.2.11
-python-dotenv>=0.19.0
-openai>=0.27.0
-google-cloud-speech>=2.21.0
-requests>=2.26.0
+SpeechRecognition>=3.10.0
+PyAudio>=0.2.13
+python-dotenv>=1.0.0
+openai>=1.12.0
+google-cloud-speech>=2.21.3
+requests>=2.32.2
+psutil>=5.9.8  # Nueva dependencia para monitoreo de recursos
 
 # Text-to-Speech
-gTTS>=2.3.0
-pygame>=2.0.0
+gTTS>=2.4.0
+pygame>=2.5.2
 
 # LLM Local
-llama-cpp-python>=0.2.11
+llama-cpp-python>=0.2.61  # Actualizado para soporte de nuevos modelos
 
 # Modelos LLM
-google-generativeai>=0.3.0
+google-generativeai>=0.3.2  # Para Gemini
 
-# Audio system dependencies (install via apt)
-# sudo apt-get install python3-pyaudio libasound2-dev portaudio19-dev
-# sudo apt-get install alsa-utils pulseaudio
+# Progreso de descargas
+tqdm>=4.66.2  # Nueva dependencia para barras de progreso
+
+# Gestión de modelos
+numpy>=1.26.4  # Dependencia implícita para varios componentes
