--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ psutil>=5.9.8  # Nueva dependencia para monitoreo de recursos
 # Text-to-Speech
 gTTS>=2.4.0
 pygame>=2.5.2
+pyttsx3==2.90
 
 # LLM Local
 llama-cpp-python>=0.2.61  # Actualizado para soporte de nuevos modelos
@@ -21,4 +22,7 @@ google-generativeai>=0.3.2  # Para Gemini
 tqdm>=4.66.2  # Nueva dependencia para barras de progreso
 
 # Gestión de modelos
-numpy>=1.26.4  # Dependencia implícita para varios componentes
+numpy>=1.21  # Dependencia implícita para varios componentes
+
+# Additional dependencies
+sounddevice==0.4.6
