Agregar soporte para timeouts en operaciones de audio, mejorar gestión de errores y actualizar dependencias. Incorporar estilo mejorado en la salida del terminal.

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ numpy>=1.21  # Dependencia implícita para varios componentes
 
 # Additional dependencies
 sounddevice==0.4.6
+prompt_toolkit>=3.0.0
