--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,6 @@ numpy>=1.21  # Dependencia implícita para varios componentes
 # Additional dependencies
 sounddevice==0.4.6
 prompt_toolkit>=3.0.0
+
+# Asegúrate de tener las siguientes dependencias para manejar correctamente el prompt y audio
+concurrent.futures
