--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "models": {
     "google": {
-      "difficulty_range": [0, 10]
+      "difficulty_range": [4, 7]
     },
     "openai": {
       "difficulty_range": [7, 10]
@@ -10,19 +10,9 @@
       "difficulty_range": [0, 6]
     }
   },
-  "timeouts": {
-      "google": 15,
-      "openai": 20,
-      "local": 30
-  },
-  "retry_policy": {
-      "max_retries": 3,
-      "backoff_base": 2,
-      "max_delay": 60
-  },
-  "fallback_order": ["google", "openai", "local"],
   "max_history": 15,
   "security": {
-      "blocked_terms": [";", "&&", "|", "`", "$("]
-  }
+    "blocked_terms": [";", "&&", "|", "`", "$("]
+  },
+  "log_level": "INFO"
 }
