Agregar configuración de audio en config.json. Implementar manejo de efectos de sonido en AudioEffects y optimizar su uso en AudioHandler. Actualizar estadísticas de interacción en jarvis_context.json.

--- a/config.json
+++ b/config.json
@@ -10,6 +10,10 @@
       "difficulty_range": [0, 3]
     }
   },
+  "audio": {
+    "tts_enabled": true,
+    "sound_effects_enabled": true
+  },
   "max_history": 15,
   "security": {
     "blocked_terms": [";", "&&", "|", "`", "$("]
