--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,36 @@
 # Core dependencies
 setuptools>=69.0.3
 wheel>=0.42.0
-numpy==2.1.0  # Versión más nueva compatible con Python 3.12
+numpy==1.26.2  # Versión más nueva compatible con Python 3.12
 numba  # Versión compatible con Python 3.12
-torch
+torch==2.1.1
 torchaudio>=2.2.0
 torchvision>=0.17.0
 
-# Audio & Speech
-SpeechRecognition
-PyAudio>=0.2.13
+# Audio y Voz
+SpeechRecognition==3.10.0
+PyAudio==0.2.14
 sounddevice==0.4.6
 openai-whisper
+pygame==2.5.2
+gTTS==2.4.0
 
-# LLM & AI
-openai>=1.12.0
+# LLMs y API
+openai==1.3.7
 llama-cpp-python
 google-generativeai>=0.3.0
-google-cloud-speech>=2.21.3
-transformers
+google-cloud-speech==2.21.0
+transformers==4.35.2
 accelerate
 
-# Text-to-Speech
-gTTS
-pygame
-pyttsx3==2.90
-
-# Utils
-python-dotenv
-requests
+# Utilidades
+python-dotenv==1.0.0
+requests==2.31.0
 psutil>=5.9.8
-tqdm
+tqdm==4.66.1
 prompt_toolkit>=3.0.0
+
+# Desarrollo
+black==23.11.0
+pylint==3.0.2
+pytest==7.4.3
