--- a/src/config/config.json
+++ b/src/config/config.json
@@ -17,15 +17,15 @@
     "system_base": "Eres {name}, un asistente virtual que proporciona respuestas precisas y contextualizadas.",
     "system_context": {
       "openai": {
-        "template": "[Contexto del Usuario]\n{user_context}\n\n[Historial]\n{conversation_history}\n\n[Memoria]\n{context_memory}\n\nInstrucción: Responde considerando el perfil del usuario y el contexto:",
+        "template": "[Perfil Asistente]\nNombre: {name}\nPersonalidad: {personality}\n\n[Rasgos Principales]\n{core_traits}\n\n[Perfil Usuario]\n{user_context}\n\n[Historial]\n{conversation_history}\n\n[Contexto]\n{context_memory}\n\nRespuesta:",
         "format": "chat"
       },
       "google": {
-        "template": "Contexto actual:\nUsuario: {user_context}\nHistorial reciente: {conversation_history}\nDatos relevantes: {context_memory}\n\nRespuesta:",
+        "template": "Como {name} ({personality}):\n\nPerfil Usuario:\n{user_context}\n\nHistorial Reciente:\n{conversation_history}\n\nContexto:\n{context_memory}\n\nRespuesta:",
         "format": "text"
       },
       "local": {
-        "template": "Perfil usuario:\n{user_context}\n\nHistorial:\n{conversation_history}\n\nContexto:\n{context_memory}\n\nRespuesta:",
+        "template": "Asistente {name} ({personality})\n\nUsuario:\n{user_context}\n\nHistorial:\n{conversation_history}\n\nContexto:\n{context_memory}\n\nRespuesta:",
         "format": "minimal"
       }
     },
