Actualizar configuración de audio en audio_config.json. Mejorar manejo de audio en audio_handler.py, utilizando valores del archivo de configuración y ajustando umbrales de energía. Incrementar estadísticas de interacción en jarvis_context.json.

--- a/src/config/audio_config.json
+++ b/src/config/audio_config.json
@@ -3,9 +3,33 @@
     "device_index": null,
     "energy_threshold": 2000,
     "dynamic_energy": true,
-    "pause_threshold": 0.5,
-    "phrase_threshold": 0.3,
-    "non_speaking_duration": 0.3,
+    "pause_threshold": 1.2,
+    "phrase_threshold": 0.5,
+    "non_speaking_duration": 0.8,
     "sample_rate": 16000
+  },
+  "speech_modes": {
+    "short_phrase": {
+      "timeout": 8,
+      "phrase_timeout": 5,
+      "energy_threshold": 2000
+    },
+    "long_phrase": {
+      "timeout": 30,
+      "phrase_timeout": 15,
+      "energy_threshold": 2000
+    },
+    "adaptive": {
+      "base_timeout": 5,
+      "max_timeout": null,
+      "timeout_increment": 0.5,
+      "energy_adjustment": 100,
+      "silence_threshold": 2.0
+    }
+  },
+  "triggers": {
+    "min_interval": 0.5,
+    "max_retries": 3,
+    "retry_delay": 1.0
   }
 }
