--- a/src/config/config.json
+++ b/src/config/config.json
@@ -9,9 +9,21 @@
     ]
   },
   "models": {
-    "google": {"difficulty_range": [4, 7]},
-    "openai": {"difficulty_range": [7, 10]},
-    "local": {"difficulty_range": [0, 6]}
+    "google": {
+      "difficulty_range": [4, 6],
+      "history_context": 3,
+      "memory_size": 10
+    },
+    "openai": {
+      "difficulty_range": [7, 10],
+      "history_context": 5,
+      "memory_size": 30
+    },
+    "local": {
+      "difficulty_range": [1, 3],
+      "history_context": 1,
+      "memory_size": 3
+    }
   },
   "prompts": {
     "system_base": "Eres {name}, un asistente virtual que proporciona respuestas precisas y contextualizadas.",
