--- a/src/config/audio_config.json
+++ b/src/config/audio_config.json
@@ -4,7 +4,7 @@
   },
   "speech_modes": {
     "short_phrase": {
-      "energy_threshold": 300,
+      "energy_threshold": 250,
       "dynamic_energy": true,
       "pause_threshold": 0.55,
       "phrase_threshold": 0.25,
@@ -17,9 +17,9 @@
       "dynamic_energy": true,
       "pause_threshold": 1.0,
       "phrase_threshold": 0.4,
-      "non_speaking_duration": 0.4,
+      "non_speaking_duration": 0.6,
       "operation_timeout": null,
-      "phrase_time_limit": 20
+      "phrase_time_limit": null
     },
     "adaptive": {
       "silence_threshold": 1.5
