--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ sympy==1.13.1
 torch==2.5.1
 transformers==4.48.1
 colorama>=0.4.6
+google-generativeai>=0.3.0
+llama-cpp-python>=0.2.9
+wolframalpha>=5.0.0
+PyAudio==0.2.14
+bitsandbytes>=0.41.1
+accelerate>=0.26.0
