feat: Implement DeepSeek API model handler and update existing models
- Added DeepSeekModel for handling DeepSeek API requests, including response sanitization and error handling.
- Updated GoogleModel to use the gemini-2.0-flash-thinking-exp model by default and increased max_tokens.
- Modified OpenAIModel to use gpt-4o-mini as the default model and increased max_tokens for better responses.
- Introduced ModelOrchestrator for intelligent multi-GPU model management, including dynamic loading and VRAM monitoring.
- Added WhisperHandler for optimized speech recognition using Faster-Whisper with CTranslate2 backend.
- Implemented MetricsTracker for performance monitoring, tracking latency, VRAM usage, costs, and model performance.
- Added context manager QueryTimer for automatic query timing and metrics tracking.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "cSpell.words": [
     "cancion",
     "musica"
-  ]
+  ],
+  "workbench.colorCustomizations": {
+    "minimap.background": "#00000000",
+    "scrollbar.shadow": "#00000000"
+  }
 }
