feat: Remove voice implementation summary and test instructions
- Deleted `voice_implementation_summary.md` as it is no longer needed.
- Removed `voice_test_instructions.md` to streamline documentation.
- Eliminated `quick_test.sh`, `restart_and_validate.sh`, and `restart_web_voice.sh` scripts to reduce redundancy.
- Updated `command_manager.py` to skip AI analysis and use fallback directly.
- Modified `api.py` to clarify message processing without streaming.
- Updated binary files in the vectorstore to reflect recent changes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,42 @@
-
 .env
 *.pyc
 __pycache__/
 logs/
+*.log
 jarvisV2/
 jarvis
 venv
+.venv*
 conversation_history.json
 models
 credentials*
+
+# Test artifacts
+artifacts/*.log
+artifacts/*.json
+artifacts/ui_tests/
+artifacts/voice_tests/
+*test_run_*.log
+
+# Coverage
+.coverage
+htmlcov/
+coverage.xml
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.bak
+*.cache
+.pytest_cache/
+.qodo/
+
+# OS
+.DS_Store
+Thumbs.db
